--- a/semana01/dia01-html/index.html
+++ b/semana01/dia01-html/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <main>
-      <section>
-        <img src="./images/image-product-desktop.jpg" alt="" />
+      <section class="photo">
+        <img src="./images/image-product-desktop.jpg" alt="Imagen de perfume" />
       </section>
-      <section>
+      <section class="contenido">
         <h3>Perfume</h3>
         <h1>Gabrielle Essence Eau De Parfum</h1>
         <p>
@@ -21,7 +21,10 @@
           <span>$149.99</span>
           <s>$169.99</s>
         </div>
-        <button><img src="./images/icon-cart.svg" alt="" />Add to Cart</button>
+        <button>
+          <img src="./images/icon-cart.svg" alt="Icono de carrito compras" />
+          Add to Cart
+        </button>
       </section>
     </main>
   </body>
