--- a/semana01/dia01-html/index.html
+++ b/semana01/dia01-html/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
-    <main>
+    <main class="box_main">
       <section class="photo">
         <img src="./images/image-product-desktop.jpg" alt="Imagen de perfume" />
       </section>
