Dando estilos al proyecto

--- a/semana01/dia01-html/index.html
+++ b/semana01/dia01-html/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
+  
   </head>
   <body>
     <main class="box_main">
       <section class="photo">
-        <img src="./images/image-product-desktop.jpg" alt="Imagen de perfume" />
+       <!-- <img src="./images/image-product-desktop.jpg" alt="Imagen de perfume" /> -->
       </section>
-      <section class="contenido">
+      <section class="content">
         <h3>Perfume</h3>
         <h1>Gabrielle Essence Eau De Parfum</h1>
         <p>
@@ -22,7 +23,7 @@
           <span>$149.99</span>
           <s>$169.99</s>
         </div>
-        <button>
+        <button class="btn">
           <img src="./images/icon-cart.svg" alt="Icono de carrito compras" />
           Add to Cart
         </button>
