--- a/semana01/dia2-reto1/index.html
+++ b/semana01/dia2-reto1/index.html
@@ -24,7 +24,7 @@
           <button>Subscribe to monthly newsletter</button>
         </form>
       </section>
-      <section class="img">
+      <section class="box_img">
         <p>Imagen</p>
       </section>
     </main>
