--- a/semana02/dia01-form/formularios.html
+++ b/semana02/dia01-form/formularios.html
@@ -14,23 +14,23 @@
       <h1>Formularios + Inputs + Validaciones</h1>
 
       <form action="">
-        <label for="">
+        <label>
           <input type="text" placeholder="Ingresa algun texto" />
         </label>
-        <label for="">
+        <label>
           Input(Solo lectura)
           <input type="text" placeholder="Input de solo lectura" />
         </label>
-        <label for="">
+        <label>
           Input(desactivado)
           <input type="text" placeholder="Input desactivado" disabled />
         </label>
-        <label for="">
+        <label>
           Input tipo number
           <input type="number" placeholder="Edad Ej. 18" name="Edad" />
         </label>
 
-        <label for="">
+        <label>
           input Tipo email
           <input
             type="email"
@@ -39,7 +39,7 @@
             placeholder="Correo Ej. soyyesica@gmail.com"
           />
         </label>
-        <label for="">
+        <label>
           Input tipo range (edad)
           <input
             type="range"
@@ -51,32 +51,32 @@
           />
         </label>
 
-        <label for="">
+        <label>
           Input tipo tel
           <input type="tel" name="" id="" placeholder="(51) 455 448 1477" />
         </label>
-        <label for="">
+        <label>
           Input tipo url
           <input type="url" name="" id="" placeholder="sitio web" />
         </label>
-        <label for="">
+        <label>
           Input tipo password
           <input type="password" name="" id="" placeholder="password" />
         </label>
-        <label for="">
+        <label>
           Input tipo color
           <input type="color" name="" id="" />
         </label>
-        <label for="">
+        <label>
           Input tipo search
           <input type="search" name="" id="" />
         </label>
-        <label for="">
+        <label>
           Input tipo file (selecciona .jpg) uno a la vez
           <input type="file" name="" id="" accept=".jpg, .jpeg" />
         </label>
 
-        <label for="">
+        <label>
           Input tipo file (selecciona multiples archivos)
           <input type="file" multiple />
         </label>
@@ -87,17 +87,17 @@
       <form action="">
         <h2>Input tipo fecha</h2>
 
-        <label for="">
+        <label>
           input tipo date (dia)
           <input type="date" name="dia" />
         </label>
 
-        <label for="">
+        <label>
           input tipo week (semana)
           <input type="week" name="semana" />
         </label>
 
-        <label for="">
+        <label>
           input tipo month (mes)
           <input type="month" name="mes" />
         </label>
@@ -108,7 +108,7 @@
       <form action="">
         <h2>Textarea</h2>
 
-        <label for="">
+        <label>
           <textarea
             name="biogradia1"
             id=""
@@ -117,7 +117,7 @@
             cols="4"
           ></textarea>
         </label>
-        <label for="">
+        <label>
           <textarea
             name="biogradia2"
             id=""
@@ -128,6 +128,82 @@
         </label>
         <input type="submit" value="Guardar" />
       </form>
+
+      <form action="">
+        <h2>Selects</h2>
+        <label>
+          Comida favorita
+          <select name="comidas" id="">
+            <option value="">Selecciona tu comida favorita</option>
+            <option value="fr">Francesa</option>
+            <option value="it">Italiana</option>
+            <option value="jp">Japonesa</option>
+            <option value="pe">Peruana</option>
+            <option value="th">Tailandesa</option>
+          </select>
+        </label>
+        <input type="submit" value="Guardar" />
+      </form>
+
+      <form action="">
+        <h2>Checkboxes</h2>
+        <h3>Lenguajes de preferencia:</h3>
+        <label>
+          <input type="checkbox" name="english" value="en">
+          Inglés
+        </label>
+       
+        <label>
+          <input type="checkbox" name="spanish" value="es">
+          Español
+        </label>
+        <label>
+          <input type="checkbox" name="portuguese" value="po">
+          Portugues
+        </label>
+        <input type="submit" value="Guardar" />
+      </form>
+
+      <form action="">
+        <h2>Radio Buttons</h2>
+        <h3>Lenguajes de preferencia:</h3>
+
+        <label>
+          <input type="radio" name="lenguaje" value="en">
+          Inglés
+        </label>
+        <label>
+          <input type="radio" name="lenguaje" value="es">
+          Español
+        </label>
+        <label>
+          <input type="radio" name="lenguaje" value="po">
+          Portugues
+        </label>
+        <input type="submit" value="Guardar" />
+      </form>
+
+      <form action="">
+        <h2>Validaciones</h2>
+
+        <label>
+          Nombre (obligatorio)
+          <input type="text" name="nombre" required minlength="3" maxlength="15">
+        </label>
+        <label>
+          Email
+          <input type="email" name="email" required >
+        </label>
+        <label>
+          Edad
+          <input type="number" name="edad" required min="1" max="99">
+        </label>
+        <input type="submit" value="Guardar" />
+
+ 
+      </form>
+
+
     </main>
   </body>
 </html>
