ejercicio1 Stay updated

--- a/semana01/dia2-reto1/index.html
+++ b/semana01/dia2-reto1/index.html
@@ -17,15 +17,12 @@
           <li>And much more!</li>
         </ul>
         <form>
-          <label>
-            Email address
-            <input type="text" placeholder="email@company.com" />
-          </label>
+          <p> Email address</p>
+          <input type="text" placeholder="email@company.com" />
           <button>Subscribe to monthly newsletter</button>
         </form>
       </section>
       <section class="box_img">
-        <p>Imagen</p>
       </section>
     </main>
   </body>
