--- a/semana01/dia2-tarea/index.html
+++ b/semana01/dia2-tarea/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HTML Y CSS TRABAJO</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <main class="content">
+      <img class="img" src="./assets/images/illustration-article.svg" alt="" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Blog preview card</title>
+      <button>Learning</button>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+      <p>Published 21 Dec 2023</p>
 
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <h1>HTML & CSS foundations</h1>
+      <p class="parrafo">
+        These languages are the backbone of every website, defining structure,
+        content, and presentation.
+      </p>
+      <div class="box__abatar">
+        <img
+          class="abatar"
+          src="./assets/images/image-avatar.webp"
+          alt=""
+        /><span>Greg Hooper</span>
+      </div>
+    </main>
+  </body>
 </html>
