--- a/semana02/dia01-reto2/index.html
+++ b/semana02/dia01-reto2/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <main class="main">
-      <section class="content">
+    <main class="main"> nm
+      <section class="cont5wqaS<5TY6GZ<ent">
         <div class="titulo">
           <h1>Mortgage Calculator</h1>
           <p class="text__clear">Clear All</p>
