proyecto concluido mortgage calculator

--- a/semana02/dia01-reto2/index.html
+++ b/semana02/dia01-reto2/index.html
@@ -52,8 +52,8 @@
           </label>
         </div>
 
-        <div>
-          <img src="./assets/images/icon-calculator.svg" alt="" />
+        <div class="boton__calculate">
+          <img src="./assets/images/icon-calculator.svg" alt="" width="18px"/>
           <p>Calculate Repayments</p>
         </div>
       </section>
@@ -63,7 +63,7 @@
             class="img"
             src="./assets/images/illustration-empty.svg"
             alt=""
-            width="80px"
+            width="100px"
           />
           <p class="text__titulo">Results shown here</p>
           <p class="text__parrafo">
