proyecto huddle resposive terminado

--- a/semana03/dia01-reto/index.html
+++ b/semana03/dia01-reto/index.html
@@ -65,7 +65,7 @@
         />
       </div>
     </section>
-    <section class="box__segundo wrapper">
+    <section class="box__segundo wrapper mobil">
       <div class="box__segundo__imagen">
         <img
           src="./images/illustration-flowing-conversation.svg"
@@ -73,7 +73,7 @@
           class="segundo__imagen"
         />
       </div>
-      <div class="box__segundo__descripcion">
+      <div class="box__segundo__descripcion ">
         <h3>Flowing Conversations</h3>
         <p class="box__segundo__parrofo">
           You wouldn't paginate a conversation in real life, so why do it
@@ -113,7 +113,7 @@
           <div class="box__footer__ubicacion">
             
             <img src="./images/icon-location.svg" alt="" />
-            <p
+            <p class="box__footer__parrafo"
               >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua</p
             >
