--- a/semana03/dia01-reto/index.html
+++ b/semana03/dia01-reto/index.html
@@ -10,7 +10,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./stile.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <title>
       Frontend Mentor | Huddle landing page with alternating feature blocks
