jugando con imagenes

--- a/semana05/dia03-bootstraps-css/index.html
+++ b/semana05/dia03-bootstraps-css/index.html
@@ -11,7 +11,20 @@
       crossorigin="anonymous"
     />
   </head>
+  <style>
+    body{
+      background-color: green;
+    }
+  </style>
   <body>
+    <nav class="navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Trabajando con Bootstrap</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        </div>
+    </nav>
     <div class="container">
       <div class="row">
         <div class="col">columna1</div>
@@ -41,5 +54,43 @@
         <div class="col">coluna 12</div>
       </div>
     </div>
+    <img src="./test.png" alt="">
+    <br>
+    <br>
+    <img src="./marca1.png" alt="">
+    <br>
+    <br>
+    <img src="./marca.png" alt="">
+    <br>
+    <br>
+    <img src="./capafinal.png" alt="">
+    <br>
+    <br>
+    <img src="./logo.png" alt="">
+    <br>
+    <br>
+    <img src="./logo2.png" alt="">
+    <img src="./logo2.png" alt="">
+    <img src="./logo2.png" alt="">
+    <img src="./logo2.png" alt="">
+    <img src="./logo2.png" alt="">
+    <br>
+    <br>
+    <img src="./logo3.jpg" alt="">
+    <br>
+    <br>
+    <img src="./logochiki.jpg" alt="">
+    <br>
+    <br>
+    <img src="./logochiki2.png" alt="">
+    <br>
+    <br>
+    <img src="./logobar1.png" alt="">
+    <br>
+    <br>
+    <img src="./logobar.png" alt="">
+    <br>
+    <br>
+    <img src="./logobar3.png" alt="">
   </body>
 </html>
