--- a/semana07/dia01-02-calculadora/index.html
+++ b/semana07/dia01-02-calculadora/index.html
@@ -11,7 +11,7 @@
       <h1 class="text-3xl">Caculadora</h1>
       <section class="flex flex-col gap-4" >
         <input type="text" readonly value="0" 
-         class="border px2 py-2 px-2 text-right text-xl"/>
+         class="display border px2 py-2 px-2 text-right text-xl"/>
         
          <div class="grid grid-cols-3 gap-2">
             <button class="bg-red-300 p-2 hover:bg-red-400 duration-300">+</button>
@@ -37,5 +37,6 @@
         
       </section>
     </main>
+    <script src="./main.js"></script>
   </body>
 </html>
