ejercicio cantidad ecommerce

--- a/semana07/dia02-03-ecommerce-css-modulos/index.html
+++ b/semana07/dia02-03-ecommerce-css-modulos/index.html
@@ -67,11 +67,11 @@
 
       <form class="product__form">
         <div class="product__quantity">
-          <button>
+          <button class="disminuir" type="button">
             <img src="./images/icon-minus.svg" />
           </button>
-          <span>0</span>
-          <button>
+          <span class="cantidad">0</span>
+          <button class="aumentar" type="button">
             <img src="./images/icon-plus.svg" />
           </button>
         </div>
