--- a/semana08/dia01-03-javascript-word-counter/index.html
+++ b/semana08/dia01-03-javascript-word-counter/index.html
@@ -15,19 +15,19 @@
     <section class="flex justify-between p-4">
       <div class="flex flex-col gap-2 items-center">
         <span class="text-md">Characters</span>
-        <span class="text-3xl">0</span>
+        <span id="characters" class="text-3xl">0</span>
       </div>
       <div class="flex flex-col gap-2 items-center">
         <span class="text-md">Words</span>
-        <span class="text-3xl">0</span>
+        <span id="words" class="text-3xl">0</span>
       </div>
       <div class="flex flex-col gap-2 items-center">
         <span class="text-md">Paragraphs</span>
-        <span class="text-3xl">0</span>
+        <span id="paragraphs" class="text-3xl">0</span>
       </div>
     </section>
 
-    <textarea class="w-full h-52 p-2 border"></textarea>
+    <textarea id="areaTexto" class="w-full h-52 p-2 border"></textarea>
   </main>
 
   <script src="./main.js"></script>
