fin de crud con json-server inicio react

--- a/semana08/dia03-01-javascript-fetch-crud/public/index.html
+++ b/semana08/dia03-01-javascript-fetch-crud/public/index.html
@@ -52,11 +52,11 @@
         </table>
       </div>
       <div>
-        <form>
+        <form id="peliculasForm">
           <h2>New Movie</h2>
-          <input type="text" placeholder="Mi Pelicula" required/>
-          <input type="text" placeholder="https://..." required/>
-          <input type="date" placeholder="estreno" required/>
+          <input name="nombre" type="text"  placeholder="Mi Pelicula" required/>
+          <input name="imagen" type="text" placeholder="https://..." required/>
+          <input name="estreno" type="date" placeholder="estreno" required/>
           <select name="genero" required>
             <option value="">Selecciona un genero...</option>
             <option value="1">Comedia</option>
